# face-calibration

./: .gitignore  README.md  pyproject.toml
data/: controls_simple.txt  semantic_to_flame_basis.npy  semantic_to_flame_deltas_basis.npy
data/identities/identity1/: global_expression.npy  identity1_identity.npy
data/masks/: 0.npy  1.npy  11.npy  17.npy  3.npy  5.npy  6.npy
examples/: flame_calibrate.py  flame_finetune.py  flame_track.py  linear_example.py
examples/configs/: example_flame.yaml
face_calibration/: __init__.py  expressions.py  finetune.py  implicit_diff.py  solver.py  tracker.py  utils.py
face_calibration/flame/: __init__.py  flame_model.py  lbs.py  rig.py
viewer/: __init__.py  camera.py  gui.py  mesh.py  renderer.py  scene.py  shaders.py  viewer.py
